# krypt

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.toml.example  devenv.nix  docker-compose.local.yaml  docker-compose.yaml  foo.json  foo2.json  loki-config.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  test.json
.cursor/rules/: general.mdc
.github/workflows/: release.yml
.tasks/: ai.md  ideas.md
crates/coinglass/: Cargo.toml
crates/coinglass/src/: lib.rs
crates/exchanges/: Cargo.toml
crates/exchanges/src/: lib.rs  utils.rs
crates/exchanges/src/binance/: README.md  api_schemes.rs  mod.rs
crates/mega_pump_scanner/: Cargo.toml
crates/pump_dump_scanner/: Cargo.toml
crates/pump_dump_scanner/src/: config.rs  main.rs  telegram.rs  ticker_scanner.rs  utils.rs
crates/scanner/: Cargo.toml
crates/scanner/pine_scripts/: mfi.md
crates/scanner/src/: main.rs
crates/scanner_api/: Cargo.toml
crates/scanner_api/pine_scripts/: atr_bottom.md
crates/scanner_api/src/: api.rs  cors.rs  fetcher.rs  main.rs  mfi.rs  models.rs  state.rs
frontend/: components.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  spec.setup.ts  todo  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.spec.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/css/: main.css  theme.css
frontend/src/config/: envs.ts  get-env.spec.ts  get-env.ts
frontend/src/globals/: vue-test-utils.d.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: MainPage.vue  index.vue  router.ts
frontend/src/pages/index/: columns.ts  data.ts
frontend/src/pages/index/ui/: FavoriteButton.vue  Filters.vue  Link.vue  MfiInfo.vue  Pair.vue  PairInfoPopover.vue
frontend/src/router/: index.ts
frontend/src/shared/api/: http.ts  index.ts  pairs.ts
frontend/src/shared/api/comments/: schemes.ts  service.ts
frontend/src/shared/api/favorites/: index.ts  service.ts  store.ts
frontend/src/shared/api/pairs/: index.ts  schemes.ts  service.ts  store.spec.ts  store.ts
frontend/src/shared/lib/: utils.ts
frontend/src/shared/lib/pairs/: extractTokenFromPair.spec.ts  extractTokenFromPair.ts
frontend/src/shared/ui/badge/: Badge.vue
frontend/src/shared/ui/button/: Button.vue  index.ts
frontend/src/shared/ui/checkbox/: Checkbox.vue
frontend/src/shared/ui/data-table/: DataTable.vue
frontend/src/shared/ui/hover-card/: HoverCardContent.vue
frontend/src/shared/ui/input/: Input.vue  SearchInput.vue  index.ts
frontend/src/shared/ui/input-group/: InputGroup.vue  InputGroupAddon.vue  InputGroupButton.vue  InputGroupInput.vue  InputGroupText.vue  InputGroupTextarea.vue  index.ts
frontend/src/shared/ui/label/: Label.vue
frontend/src/shared/ui/popover/: PopoverContent.vue
frontend/src/shared/ui/select/: SelectContent.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
frontend/src/shared/ui/table/: Table.vue  TableBody.vue  TableCaption.vue  TableCell.vue  TableEmpty.vue  TableFooter.vue  TableHead.vue  TableHeader.vue  TableRow.vue
frontend/src/shared/ui/textarea/: Textarea.vue
src/: config.rs  detection.rs  engine.rs  main.rs  scoring.rs  streams.rs  telegram.rs  types.rs
src/exchange/: binance.rs  bybit.rs  mod.rs  types.rs
src/indicators/: ema.rs  mod.rs  pivot.rs
src/pump_scanner/: analysis.rs  detector.rs  mod.rs  qualifier.rs  tracker.rs
src/telegram/: mod.rs
