[package]
name = "krypt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.12.26", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
url = "2.5"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
chrono = "0.4"

teloxide = "0.17.0"
