
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

too_many_lines = "allow"
unused_self = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
similar_names = "allow"

[workspace]
members = ["crates/coinglass", "crates/exchanges", "crates/pump_dump_scanner"]
resolver = "3"

[workspace.dependencies]
exchanges = { path = "crates/exchanges" }
coinglass = { path = "crates/coinglass" }

# External
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
reqwest = { version = "0.12.28", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
url = "2.5"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

teloxide = "0.17.0"
ta = "0.5"
