
[package]
name = "exchanges"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
rayon.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
