
[package]
name = "pump_dump_scanner"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
exchanges.workspace = true

tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

teloxide.workspace = true
